wlrexamples: Tests for wl_list