@@ -15,6 +15,16 @@ sourceSets.create("generated")
 dependencies {
     implementation("org.jspecify", "jspecify", "1.0.0")
     implementation(sourceSets.named("generated").get().output)
+    testImplementation("io.kotest", "kotest-runner-junit5", "5.9.1")
+    testImplementation("io.kotest", "kotest-assertions-core", "5.9.1")
+}
+
+tasks.withType<Test> {
+    useJUnitPlatform()
+    jvmArgs(
+        "-ea",
+        "--enable-native-access=ALL-UNNAMED"
+    )
 }
 
 java {
@@ -31,12 +41,9 @@ kotlin.compilerOptions {
 application {
 //    mainClass.set("example.wrap.simple.SimpleKt")
     mainClass.set("example.wrap.Simple2Kt")
-//    mainClass.set("example.ListDemoKt")
     applicationDefaultJvmArgs = listOf(
         "-ea",
-        "--enable-preview",
-        "--enable-native-access", "ALL-UNNAMED",
         "--enable-native-access=ALL-UNNAMED",
-        "-Dforeign.restricted=permit",
+//        "-Dforeign.restricted=permit",
     )
 }
